raffia/tests/error/scss/at-rule/use/default.snap
---
source: raffia/tests/error.rs
---
error: expect token `,`, but found `!`
  ┌─ default.scss:1:26
  │
1 │ @use "other" with ($a: b !default);
  │                          ^


